fixes bug 267990 "crash [@ nsXFormsModelElement::DocumentChanged]" r=bryner